tests/baselines/reference/classExtendingPrimitive.errors.txt
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive.ts(3,17): error TS18043: A class cannot extend a primitive type like 'number'. A class can only extend named object types.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive.ts(4,18): error TS18043: A class cannot extend a primitive type like 'string'. A class can only extend named object types.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive.ts(5,18): error TS18043: A class cannot extend a primitive type like 'boolean'. A class can only extend named object types.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive.ts(6,18): error TS2304: Cannot find name 'Void'.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive.ts(7,19): error TS1109: Expression expected.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive.ts(8,18): error TS2304: Cannot find name 'Null'.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive.ts(10,18): error TS2507: Type 'undefined' is not a constructor function type.
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive.ts(11,18): error TS2552: Cannot find name 'Undefined'. Did you mean 'undefined'?
tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive.ts(14,18): error TS2507: Type 'typeof E' is not a constructor function type.


==== tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive.ts (9 errors) ====
    // classes cannot extend primitives
    
    class C extends number { }
                    ~~~~~~
!!! error TS18043: A class cannot extend a primitive type like 'number'. A class can only extend named object types.
    class C2 extends string { }
                     ~~~~~~
!!! error TS18043: A class cannot extend a primitive type like 'string'. A class can only extend named object types.
    class C3 extends boolean { }
                     ~~~~~~~
!!! error TS18043: A class cannot extend a primitive type like 'boolean'. A class can only extend named object types.
    class C4 extends Void  { }
                     ~~~~
!!! error TS2304: Cannot find name 'Void'.
    class C4a extends void {}
                      ~~~~
!!! error TS1109: Expression expected.
    class C5 extends Null { }
                     ~~~~
!!! error TS2304: Cannot find name 'Null'.
    class C5a extends null { }
    class C6 extends undefined { }
                     ~~~~~~~~~
!!! error TS2507: Type 'undefined' is not a constructor function type.
    class C7 extends Undefined { }
                     ~~~~~~~~~
!!! error TS2552: Cannot find name 'Undefined'. Did you mean 'undefined'?
    
    enum E { A }
    class C8 extends E { }
                     ~
!!! error TS2507: Type 'typeof E' is not a constructor function type.